Update active-delegation endpoint
