# dbsync-api/src/controllers/drep.ts
@@ -5,12 +5,11 @@ import {
     fetchDrepDelegationDetails,
     fetchDrepDetails,
     fetchDrepList,
+    fetchDrepActiveDelegation,
     fetchDrepRegistrationDetails,
     fetchDrepVoteDetails,
 } from '../repository/drep'
 import { DrepSortType, DrepStatusType } from '../types/drep'
-import { fetchDelegationDetail, fetchDelegationRewardBalance } from '../repository/delegation'
-import { fetchStakeAddressId, fetchStakeAddressUtxoSum } from '../repository/stakeAddress'
 
 const router = Router()
 
@@ -60,44 +59,13 @@ const getDrepRegistrationDetails = async (req: Request, res: Response) => {
     return res.status(200).json(result)
 }
 
-const getDrepLiveVotingPower = async (req: Request, res: Response) => {
+const getDrepActiveDelegation = async (req: Request, res: Response) => {
     const dRepId = convertToHexIfBech32(req.params.id as string)
     if (dRepId && !isHexValue(dRepId)) {
         return res.status(400).json({ message: 'Provide a valid Drep ID' })
     }
-    const result = await fetchDrepDelegationDetails(dRepId)
-    const delegatorStakeAddresses = result.map((res: any) => res.stakeAddress)
-    let totalValue = BigInt(0)
-
-    for (let i = 0; i < delegatorStakeAddresses.length; i++) {
-        let address = convertToHexIfBech32(delegatorStakeAddresses[i])
-        if (validateAddress(address)) {
-            address = address.length === 56 ? `e0${address}` : address
-        } else {
-            return res.status(400).json({ message: 'Provide a valid address' })
-        }
-        const delegatorInfo = await fetchDelegationDetail(address)
-        if (
-            delegatorInfo.drep.drep_id === 'drep_always_abstain' ||
-            delegatorInfo.drep.drep_id === 'drep_always_no_confidence'
-        ) {
-            continue
-        } else if (convertToHexIfBech32(delegatorInfo.drep.drep_id) === dRepId) {
-            const stakeAddressId = await fetchStakeAddressId(address)
-            if (stakeAddressId) {
-                const rewards = await fetchDelegationRewardBalance(stakeAddressId)
-                const rewardBalance = rewards.rewardbalance == null ? BigInt(0) : BigInt(rewards.rewardbalance)
-                const restRewardBalance =
-                    rewards.rewardrestbalance == null ? BigInt(0) : BigInt(rewards.rewardrestbalance)
-                const value = BigInt(await fetchStakeAddressUtxoSum(stakeAddressId))
-                totalValue += value + rewardBalance + restRewardBalance
-            }
-        }
-    }
-    const votingPower = {
-        votingPower: totalValue.toString(),
-    }
-    return res.status(200).json(votingPower)
+    const result = await fetchDrepActiveDelegation(dRepId)
+    return res.status(200).json(result)
 }
 
 router.get('/', handlerWrapper(getDrepList))
@@ -105,6 +73,6 @@ router.get('/:id', handlerWrapper(getDrepDetails))
 router.get('/:id/vote', handlerWrapper(getDrepVoteDetails))
 router.get('/:id/delegation', handlerWrapper(getDrepDelegationDetails))
 router.get('/:id/registration', handlerWrapper(getDrepRegistrationDetails))
-router.get('/:id/live-voting-power', handlerWrapper(getDrepLiveVotingPower))
+router.get('/:id/active-delegation', handlerWrapper(getDrepActiveDelegation))
 
 export default router
